--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -18,6 +18,14 @@ img#side {
     margin-right: auto;
 }
 
+.content-section {
+    background: #ffffff;
+    padding: 10px 20px;
+    border: 1px solid #dddddd;
+    border-radius: 3px;
+    margin-bottom: 20px;
+}
+
 img#solar {
     width: 80%;
     height: 100px;
