--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,30 +1,49 @@
 {% extends "base.html" %}
 {% block content %}
-<div>
-    <form method="POST" action="">
-        {{ form.hidden_tag() }}
-        <fieldset>
-            <legend>Log In</legend>
-            <div>
-                {{ form.username.label }}
-                {{ form.username }}
+<div class="content-section">
+        <h2>
+            Welcome back, please log in
+        </h2>
+        <form method="POST" action="">
+            {{ form.hidden_tag() }}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Log In</legend>
+                <div class="form-group">
+                    {{ form.username.label(class="form-control-label") }}
+                    {% if form.username.errors %}
+                        {{ form.username(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.username.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.username(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                <br>
+                <div class="form-group">
+                    {{ form.password.label(class="form-control-label") }}
+                    {% if form.password.errors %}
+                        {{ form.password(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.password.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.password(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+            </fieldset>
+            <div class="form-group">
+                {{ form.submit(class="btn btn-outline-info") }}
             </div>
-            <div>
-                {{ form.password.label }}
-                {{ form.password }}
-            </div>
-        </fieldset>
-        <div>
-            {{ form.submit }}
-        </div>
-        <small>
-            <a href="#">Forgot Password?</a>
+        </form>
+    </div>
+    <div class="border-top pt-3">
+        <small class="text-muted">
+            Need An Account? <a class="ml-2" style="color:white" href="{{ url_for('register') }}">Sign Up Now</a>
         </small>
-    </form>
-</div>
-<div>
-    <small>
-        Need An Account? <a href="{{ url_for('register') }}">Sign Up Now</a>
-    </small>
-</div>
+    </div>
 {% endblock %}
