--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,6 +35,9 @@
                         <a class="nav-link" href="{{ url_for('calculate') }}">CALCULATOR</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('result') }}">RESULT</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('about') }}">TEAMS</a>
                     </li>
                     <li class="nav-item">
