--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,3 +1,7 @@
+<head>
+    <link rel='stylesheet' href='~/PycharmProject/TeamCharites_SolarCalculatorAppWeb/app/static/css/index.css'>
+</head>
+<body>
 {% extends "base.html" %}
 {% block content %}
     <div class="container">
@@ -36,3 +40,4 @@
 {% endblock %}
 
 {% block safe %}{% endblock %}
+</body>
