--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,8 +13,7 @@
                     plan for the safier, healthier and cost friendly future you and your family have always dreamt of.
                 </p>
 
-                <a href="#" class='btn mt-3 mb-5 shadow-lg'>Calculate now</a>
-
+                <a href="https://charites-solarcalculator.herokuapp.com/calculate" class='btn mt-3 mb-5 shadow-lg'>Calculate now</a>
             </div>
 
             <div class="col-md-6">
