--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,6 +32,13 @@
                         <a class="nav-link" href="{{ url_for('index') }}">HOME</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('register') }}">REGISTER</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('login') }}">LOG IN</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('calculate') }}">CALCULATOR</a>
                     </li>
                     <li class="nav-item">
