--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,7 +8,7 @@
         <title>Elektor</title>
     {% endif %}
 
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="TeamCharites_SolarCalculatorAppWeb/app/static/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/results.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/404.css') }}">
