--- a/app/static/css/about.css
+++ b/app/static/css/about.css
@@ -216,3 +216,55 @@ footer img{
         margin-right: auto;
     }
 }
+
+
+
+
+.field{
+    width: 100%;
+    padding: 0.5em 1rem;
+    outline: none;
+    border: 2px solid rgba(0,0,0,0);
+    background-color: rgba(230,230,230, 0.6);
+    font-size: 1.1rem;
+    margin-bottom: 22px;
+    transition: .3s;     
+}
+.field:hover{
+    background-color: rgba(0,0,0,0.1);
+}
+.field:focus{
+    background-color: #fff;
+    border: 2px solid #00b300;
+    border-radius: 4px;
+} 
+.area{
+    min-height: 150px;
+}
+
+.btn{
+    width:100%;
+    padding: 0.5rem 1rem;
+    font-size: 1.1rem;
+    background-color: #134373;
+    cursor: pointer;
+    outline: none;
+    border:none;
+    margin-bottom: 15px;
+    transition: .3s;
+    color: #fff;
+}
+.btn:hover{
+    background-color: #134373;
+    color: #fafcfe;
+}
+
+.text-content{
+    /* box-shadow: 0px 0px 19px 5px rgba(0,0,0,0.19); */
+    padding: 1.1rem 2rem;
+}
+
+.text-content:hover{
+  /* box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.1); */
+  padding: 1.1rem 2rem;
+}
