--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,5 +1,51 @@
-{% extends "base.html" %}
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Elektor | Error 404</title>
+
+
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}">
+	<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/404.css') }}">
+</head>
+
+<body>
+
+
+    <nav class="navbar navbar-expand-md navbar-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="{{ url_for('static', filename='img/elektor-white.png') }}"
+                    class='logo' alt="Brand"></a>
+            <button class="navbar-toggler bg-white" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+                <span class="navbar-toggler-icon" style='color:white'></span>
+            </button>
+            <div class="collapse navbar-collapse text-white" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('index') }}">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('calculate') }}">CALCULATOR</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('login') }}">LOGIN</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('register') }}">REGISTER</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('about') }}">ABOUT</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <div class="container">
         <div class="row">
             <div class="col-md-4"></div>
@@ -24,7 +70,8 @@
                             <div class="notfound-404"></div>
                             <h1> ERROR 404</h1>
                             <h2>Oops! Page Not Be Found</h2>
-                            <p>Sorry but the page you are looking for does not exist, have been removed. name changed or is temporarily unavailable</p>
+                            <p>Sorry but the page you are looking for does not exist, have been removed. name changed or
+                                is temporarily unavailable</p>
                             <a href="{{ url_for('index') }}">Back to homepage</a>
                         </div>
                     </div>
@@ -52,4 +99,43 @@
             </div>
         </div>
     </div>
-{% endblock %}
+
+
+    <footer style="background-color: #134373; color:#fafcfe; padding-top: 15px;">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5">
+                    <img src="{{ url_for('static', filename='img/whitecalc.png') }}" alt="">
+                    <img src="{{ url_for('static', filename='img/elektor-white.png') }}" alt="">
+                    <div class="div">
+                        <p class='mt-3'> &copy; 2019. TeamCharites All rights reserved</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <h3 style="color: #e0dd1c;">About the App</h3>
+                    <p>Know how much power you have in your surrounding at different time
+                        intervals in order to
+                        plan for the safier, healthier and cost friendly future you and your family have always dreamt
+                        of.</p>
+                </div>
+                <div class="col-md-3">
+                    <h3 style="color: #e0dd1c;">Contact Us</h3>
+                    <address style="margin-bottom:30px;">
+                        Team Charites <br>
+                        3, Remote House,<br>
+                        HNG Avenue, Nigeria <br>
+                        +234-1111-0000 <br>
+                        info@charitesfinance.com
+                    </address>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+    <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
+</body>
+
+</html>
