--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,4 +1,156 @@
-{% extends "base.html" %}
-{% block content %}
-    <h1>About Page</h1>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Elektor | Error 404</title>
+
+
+	<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+
+
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}">
+
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/about.css') }}">
+</head>
+
+<body>
+
+
+    <nav class="navbar navbar-expand-md navbar-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="{{ url_for('static', filename='img/elektor-white.png') }}"
+                    class='logo' alt="Brand"></a>
+            <button class="navbar-toggler bg-white" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+                <span class="navbar-toggler-icon" style='color:white'></span>
+            </button>
+            <div class="collapse navbar-collapse text-white" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('index') }}">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('calculate') }}">CALCULATOR</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('login') }}">LOGIN</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('register') }}">REGISTER</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('about') }}">ABOUT</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-6">
+                <div id='top'>
+                    <img src="{{ url_for('static', filename='img/whitecalc.png') }}" class='img-fluid' alt="">
+                    <h2>CALCULATOR</h2>
+                </div>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+
+                <div class='req mb-2 shadow-lg' style='background-color: #fafcfe; padding:10px; border-radius: 10px;'>
+                        <div class="text-content">
+                                <div class="row">
+                                    <div class="col-md-6 mb-2">
+                                        <h2 class="pt-3 text-center">About Us</h2>
+                                        <img src="{{ url_for('static', filename='img/resi.png') }}" id='circle' style="margin-left:auto; margin-right:auto; display:block" height="50%" width="80%" class='img-flud mb-3' alt="">
+                                        <p>Know how much power you have in your surrounding at different time
+                                                intervals in order to
+                                                plan for the safier, healthier and cost friendly future you and your family have always dreamt of.</p>
+                                    </div>
+                    
+                                    <div class="col-md-6">
+                                        <h2 class="pt-3 text-center">Contact Us</h2>
+                                        <form action="">
+                                            <input type="text" class='field' placeholder="Your Name" required>
+                                            <input type="email" class="field" placeholder="Email Address" required>
+                                            <input type="text" class="field" placeholder="Telephone Number" required>
+                                            <textarea name="" class="field area" id="" placeholder="Message"
+                                                required></textarea>
+                                            <button type="submit" class='btn'>Submit</button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                </div>
+                <div class="col-md-2"></div>
+
+            </div>
+        </div>
+
+    <div class="container">
+        <div class="row my-5">
+            <div class="col-md-2"></div>
+            <div class="col-md-3">
+                <div id="pad">
+                    <img src="{{ url_for('static', filename='img/lock.svg') }}" class='img-fluid' alt="">
+                </div>
+            </div>
+            <div class="col-md-7 text-white">
+                <div id='data'>
+                    <h2>Your data is safe with Us. <br>
+                        We are 100% secure.</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <footer style="background-color: #134373; color:#fafcfe; padding-top: 15px;">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5">
+                    <img src="{{ url_for('static', filename='img/whitecalc.png') }}" alt="">
+                    <img src="{{ url_for('static', filename='img/elektor-white.png') }}" alt="">
+                    <div class="div">
+                        <p class='mt-3'> &copy; 2019. TeamCharites All rights reserved</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <h3 style="color: #e0dd1c;">About the App</h3>
+                    <p>Know how much power you have in your surrounding at different time
+                        intervals in order to
+                        plan for the safier, healthier and cost friendly future you and your family have always dreamt
+                        of.</p>
+                </div>
+                <div class="col-md-3">
+                    <h3 style="color: #e0dd1c;">Contact Us</h3>
+                    <address style="margin-bottom:30px;">
+                        Team Charites <br>
+                        3, Remote House,<br>
+                        HNG Avenue, Nigeria <br>
+                        +234-1111-0000 <br>
+                        info@charitesfinance.com
+                    </address>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+    <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
+</body>
+
+</html>
