--- a/app/templates/calculate.html
+++ b/app/templates/calculate.html
@@ -1,62 +1,177 @@
-{% extends "base.html" %}
-{% block content %}
-    <h1>Calculate</h1>
-    <div id="img-text-align">
-        <div class="img-text">
-            <img src="{{ url_for('static', filename='img/img-calc2.png') }}"/>
-        </div>
-        <div class="img-text">
-            <div class="header-text">
-                
-                 <p>CALCULATOR</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Elektor | Calculator</title>
+
+
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/404.css') }}">
+
+
+    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+
+
+
+</head>
+
+<body>
+
+        <nav class="navbar navbar-expand-md navbar-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><img src="{{ url_for('static', filename='img/elektor-white.png') }}"
+                            class='logo' alt="Brand"></a>
+                    <button class="navbar-toggler bg-white" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+                        <span class="navbar-toggler-icon" style='color:white'></span>
+                    </button>
+                    <div class="collapse navbar-collapse text-white" id="navbarResponsive">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('index') }}">HOME</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('calculate') }}">CALCULATOR</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('login') }}">LOGIN</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('register') }}">REGISTER</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('about') }}">ABOUT</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
+            </nav>
+
+
+            <div class="container">
+                    <div class="row">
+                        <div class="col-md-4"></div>
+                        <div class="col-md-6">
+                            <div id='top'>
+                                <img src="{{ url_for('static', filename='img/whitecalc.png') }}" class='img-fluid' alt="">
+                                <h2>CALCULATOR</h2>
+                            </div>
+                        </div>
+                        <div class="col-md-2"></div>
+                    </div>
+                </div>
+
+
+    <div class="container">
+        <div class="row">
+                 <div class="col-md-12">
+                <div id="container" style="background:#fafcfe; padding: 20px; border-radius: 5px;">
+                    <div id="wrapper">
+                        <div id="form-container">
+                            <div class="img-form">
+                                <div id="wrapper" class="form-wrapper">
+                                    <form class="appliance">
+                                        <div class="table-responsive">
+                                        <table class='table'>
+                                            <h5>Please fill in your appliances</h5>
+                                            <tr>
+                                                <td><input id="device" type="" name="" placeholder="Device/Appliance">
+                                                </td>
+                                                <td><input id="quantity" type="" name="" placeholder="Quantity"></td>
+                                                <td><input id="power" type="" name=""
+                                                        placeholder="Power consumption (Watts)"></td>
+                                                <td><input id="hoursPerDay" type="" name="" max=24
+                                                        placeholder="Hours per day  use"></td>
+                                                <td><button type="button" class='btn btn-primary' onclick="calculate()">Add</button></td>
+                                            </tr>
+                                        </table>
+                                    </div>
+                                    </form>
+
+                                    <br><br>
+                                    <div class="table-responsive">
+                                    <table class='table'>
+                                        <h4>YOUR DATA</h4>
+                                        <tr>
+                                            <th scope="row">Device/Appliance</th>
+                                            <th scope="row">Quantity</th>
+                                            <th scope="row">Power consumption (Watts)</th>
+                                            <th scope="row">Hours per day use</th>
+                                        </tr>
+                                    </div>
+                                    <div class="table-responsive">
+                                        <table class='table' id="theTable"></table>
+                                                                        </table>
+                                </div>
+                                    <button id="totalButton" class="btn btn-primary login mt-3" onclick="totalPowerConsumption()">Show Your Total
+                                        Output</button>
+                                    <div id="total"></div>
+                                    <br>
+                                    <button id="reset" class="btn btn-primary login" onclick="reset()">Reset</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
-        </div>
-    </div>
-<div id="container">
-    <div id="wrapper">
 
-    <div id="form-container">
-       
-        <div class="img-form">
-          
+            <div class="container">
+                    <div class="row my-5">
+                        <div class="col-md-2"></div>
+                        <div class="col-md-3">
+                            <div id="pad">
+                                <img src="{{ url_for('static', filename='img/lock.svg') }}" class='img-fluid' alt="">
+                            </div>
+                        </div>
+                        <div class="col-md-7 text-white">
+                            <div id='data'>
+                                <h2>Your data is safe with Us. <br>
+                                    We are 100% secure.</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        
+            <footer style="background-color: #134373; color:#fafcfe; padding-top: 15px;">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-5">
+                            <img src="{{ url_for('static', filename='img/whitecalc.png') }}" alt="">
+                            <img src="{{ url_for('static', filename='img/elektor-white.png') }}" alt="">
+                            <div class="div">
+                                <p class='mt-3'> &copy; 2019. TeamCharites All rights reserved</p>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <h3 style="color: #e0dd1c;">About the App</h3>
+                            <p>Know how much power you have in your surrounding at different time
+                                intervals in order to
+                                plan for the safier, healthier and cost friendly future you and your family have always dreamt
+                                of.</p>
+                        </div>
+                        <div class="col-md-3">
+                            <h3 style="color: #e0dd1c;">Contact Us</h3>
+                            <address style="margin-bottom:30px;">
+                                Team Charites <br>
+                                3, Remote House,<br>
+                                HNG Avenue, Nigeria <br>
+                                +234-1111-0000 <br>
+                                info@charitesfinance.com
+                            </address>
+                        </div>
+                    </div>
+                </div>
+            </footer>
 
 
-          <div id="wrapper" class="form-wrapper">
-            <form class="appliance"  >
-                <table>
-                    <h5>Please fill in your appliances</h5>
-                    <tr>
-                        <td><input id="device" type="" name="" placeholder="Device/Appliance"></td>
-                        <td><input id="quantity" type="" name="" placeholder="Quantity"></td>
-                        <td><input id="power" type="" name="" placeholder="Power consumption (Watts)"></td>
-                        <td><input id="hoursPerDay" type="" name=""  max=24 placeholder="Hours per day  use"></td>
-                        <td><button type="button"  onclick="calculate()">Add</button></td>
-                    </tr>
-                </table>
-            </form>
-            
-            <br><br>
+            <script type="text/javascript" src="{{ url_for('static', filename='js/solar2.js') }}"></script>
+            <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+            <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
+            <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
 
-            <table>
-                <h2>YOUR DATA</h2>
-                <tr>
-                    <th>Device/Appliance</th>
-                    <th>Quantity</th>
-                    <th>Power consumption (Watts)</th>
-                    <th>Hours per day  use</th>
-                    <th></th>
-                    <th></th>
-                </tr>
-                <table id="theTable"></table>
-            </table>
+</body>
 
-            <button id="totalButton" class="login" onclick="totalPowerConsumption()">Your Total Output</button>
-            <div id="total"></div>
-            <br>
-            <button id="reset" class="login" onclick="reset()">reset</button>
-        </div>
-        </div>
-    </div>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/solar2.js') }}"></script>
-{% endblock %}
+</html>
