--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,42 +1,133 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <link rel='stylesheet' href='~/PycharmProject/TeamCharites_SolarCalculatorAppWeb/app/static/css/index.css'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Elektor | Home</title>
+
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}">
+
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}">
+
 </head>
 <body>
-{% extends "base.html" %}
-{% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 mt-3">
-                <h1 class='mb-4' id="solar">Solar power <br> is the future</h1>
-                <p class='mb-2 text-justify'>Know how much power you have in your surrounding at different time
-                    intervals in order to
-                    plan for the safier, healthier and cost friendly future you and your family have always dreamt of.
-                </p>
 
-                <a href="https://charites-solarcalculator.herokuapp.com/calculate" class='btn mt-3 mb-5 shadow-lg'>Calculate now</a>
-            </div>
-
-            <div class="col-md-6">
-                <img src="{{ url_for('static', filename='img/side.png') }}" id='side' alt="">
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-md navbar-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="{{ url_for('static', filename='img/elektor.png') }}"
+                    class='logo' alt="Brand"></a>
+            <button class="navbar-toggler bg-white" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+                <span class="navbar-toggler-icon" style='color:white'></span>
+            </button>
+            <div class="collapse navbar-collapse text-white" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('index') }}">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('calculate') }}">CALCULATOR</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('login') }}">LOGIN</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('register') }}">REGISTER</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('about') }}">ABOUT</a>
+                    </li>
+                </ul>
             </div>
         </div>
-
-        <div class="row">
-            <div class="col-md-2"></div>
+    </nav>
+    
+        <div role="main" class="container">
+          <div class="row">
             <div class="col-md-8">
-                <img src="{{ url_for('static', filename='img/solar-house.svg') }}" id='solar' alt="">
-                <h3 class='text-center' style="color:#134373">Are you looking to get a solar panel?</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed numquam voluptates ad aperiam deleniti
-                    dicta repellendus dolor maiores, aut perspiciatis, distinctio a ea quam facere inventore possimus
-                    maxime autem nulla.</p>
+              {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                  {% for category, message in messages %}
+                    <div class="alert alert-{{ category }}">
+                      {{ message }}
+                    </div>
+                  {% endfor %}
+                {% endif %}
+              {% endwith %}
+              </div>
 
-                <a href="#" class='btn learn'>Learn More</a>
-
+        <div class="container mt-4">
+                <div class="row">
+                    <div class="col-md-6 mt-3">
+                        <h1 class='mb-4' id="solar">Solar power <br> is the future</h1>
+                        <p class='mb-2 text-justify'>Know how much power you have in your surrounding at different time
+                            intervals in order to
+                            plan for the safier, healthier and cost friendly future you and your family have always dreamt of.
+                        </p>
+        
+                        <a href="#" class='btn mt-3 mb-5 shadow-lg'>Calculate now</a>
+        
+                    </div>
+        
+                    <div class="col-md-6">
+                        <img src="{{ url_for('static', filename='img/solar-panel.png') }}" id='side' alt="">
+                    </div>
+                </div>
+        
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-8">
+                        <img src="{{ url_for('static', filename='img/solar-house.svg') }}" id='solar' alt="">
+                        <h3 class='text-center' style="color:#134373">Are you looking to get a solar panel?</h3>
+                        <p>Generators can break, fossil fuels can run out, and
+                                utility companies can dissolve. The sun on the other hand is going nowhere, and sustainable and renewable
+                                energy creates an independence from expensive enery providers and that is why You ought to get a solar panel from Elektor today.</p>
+        
+                        <a href="#" class='btn learn'>Learn More</a>
+        
+                    </div>
+                    <div class="col-md-2"></div>
+                </div>
             </div>
-            <div class="col-md-2"></div>
-        </div>
-    </div>
-{% endblock %}
 
-{% block safe %}{% endblock %}
+
+            <footer style="background-color: #134373; color:#fafcfe; padding-top: 15px;">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-5">
+                                    <img src="{{ url_for('static', filename='img/whitecalc.png') }}" alt="">
+                                    <img src="{{ url_for('static', filename='img/elektor-white.png') }}" alt="">
+                                    <div class="div">
+                                        <p class='mt-3'> &copy; 2019. TeamCharites All rights reserved</p>
+                                    </div>
+                            </div>
+                            <div class="col-md-4">
+                                    <h3>About the App</h3>
+                                    <p>Know how much power you have in your surrounding at different time
+                                            intervals in order to
+                                            plan for the safier, healthier and cost friendly future you and your family have always dreamt of.</p>
+                            </div>
+                            <div class="col-md-3">
+                                <h3>Contact Us</h3>
+                                <address style="margin-bottom:30px;">
+                                    Team Charites <br>
+                                    3, Remote House,<br>
+                                    HNG Avenue, Nigeria <br>
+                                    +234-1111-0000 <br>
+                                    info@charitesfinance.com
+                                </address>
+                            </div>
+                        </div>
+                    </div>
+                    </footer>
+    
+
+
+            <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+            <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
+            <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
 </body>
+</html>
+    
+
