--- a/app/templates/calculate.html
+++ b/app/templates/calculate.html
@@ -103,13 +103,14 @@
                                     </div>
                                     <div class="table-responsive">
                                         <table class='table' id="theTable"></table>
-                                                                        </table>
+
                                 </div>
                                     <button id="totalButton" class="btn btn-primary login mt-3" onclick="totalPowerConsumption()">Show Your Total
                                         Output</button>
                                     <div id="total"></div>
                                     <br>
                                     <button id="reset" class="btn btn-primary login" onclick="reset()">Reset</button>
+                                    <button id="result" class="btn btn-primary login" >Result</button>
                                 </div>
                             </div>
                         </div>
