--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -22,23 +22,18 @@
                     <h4 class='text-center my-4'>Results</h4>
                     <div class="row">
                         <div class="col-md-6">
-                            <h3>Number of Batteries required</h3>
-                            <p>06</p>
+                            <h3>Panel Capacity Required</h3>
+                            <p>{{Panel_capacity_needed}}</p>
                         </div>
                         <div class="col-md-6">
                             <h3>Number of solar panel required</h3>
-                            <p>06</p>
+                            <p>{{number_of_panels_needed}}</p>
                         </div>
                     </div>
 
-                    <div class="row">
                         <div class="col-md-6">
-                            <h3>No of Charge Controller required</h3>
-                            <p>06</p>
-                        </div>
-                        <div class="col-md-6">
-                            <h3>Number of Inverter required</h3>
-                            <p>06</p>
+                            <h3>Battery required</h3>
+                            <p>{{battery_required}}</p>
                         </div>
                     </div>
                     <button class='btn btn-primary btn-block w-75 mx-auto mb-3'>Send results to your mail</button>
