--- a/app/templates/calculate.html
+++ b/app/templates/calculate.html
@@ -108,9 +108,9 @@
                                     <button id="totalButton" class="btn btn-primary login mt-3" onclick="totalPowerConsumption()">Show Your Total
                                         Output</button>
                                     <div id="total"></div>
+                                    <a id="getresult" class="btn btn-primary login" href="{{ url_for('get_result') }}" >Get Result</a>
                                     <br>
-                                    <button id="reset" class="btn btn-primary login" onclick="reset()">Reset</button>
-                                    <button id="result" class="btn btn-primary login" >Result</button>
+                                    <button id="reset" class="btn btn-primary" onclick="reset()">Reset</button>
                                 </div>
                             </div>
                         </div>
