--- a/app/templates/get_result.html
+++ b/app/templates/get_result.html
@@ -32,6 +32,11 @@
     Days of autonomy: <input id="doa">
     </div>
 </div>
+<div class="container">
+    <div class="row">
+        <button id="result" class="btn btn-primary login" >Result</button>
+    </div>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/app.js') }}"></script>
 <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
