--- a/app/templates/calculate.html
+++ b/app/templates/calculate.html
@@ -110,7 +110,7 @@
                                     <div id="total"></div>
                                     <a id="getresult" class="btn btn-primary login" href="{{ url_for('get_result') }}" >Get Result</a>
                                     <br>
-                                    <button id="reset" class="btn btn-primary" onclick="reset()">Reset</button>
+                                    <button id="reset" class="btn btn-primary login" onclick="reset()">Reset</button>
                                 </div>
                             </div>
                         </div>
