--- a/app/templates/calculate.html
+++ b/app/templates/calculate.html
@@ -107,6 +107,7 @@
                                 </div>
                                     <button id="totalButton" class="btn btn-primary login mt-3" onclick="totalPowerConsumption()">Show Your Total
                                         Output</button>
+                                    <a href="{{ url_for('get_result') }}">Get Result</a>
                                     <div id="total"></div>
                                     <br>
                                     <button id="reset" class="btn btn-primary login" onclick="reset()">Reset</button>
