--- a/app/templates/get_result.html
+++ b/app/templates/get_result.html
@@ -15,7 +15,26 @@
 
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
+    <script type=text/javascript>
+        $(function() {
+            $('#calculate').click(function(){
+              $.ajax({
+                url: '/result',
+                data:{
+                  total_power:$("#tpc").val();
+                   solar_panel_power :$("#spp").val();
+                    battery_voltage : $("#bv").val();
+                    days_of_autonomy:$("#doa").val();
+                },
+                dataType: 'JSON',
+                type: 'GET',
+                success: function(data){
+                    $("#result").html(data.result);
+                }
+                });
+             });
+        });
+</script>
 
 </head>
 <body>
@@ -39,7 +58,7 @@
     </div>
 </div>
 
-<script type="text/javascript" src="{{ url_for('static', filename='js/app.js') }}"></script>
+<!--<script type="text/javascript" src="{{ url_for('static', filename='js/app.js') }}"></script>-->
 <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
 <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
