--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -84,7 +84,7 @@
 <!--                                    {% endfor %}-->
 <!--                                </div>-->
 <!--                                {% else %}-->
-<!--                                {{ form.username(class="form-control form-control-lg") }}-->
+                                {{ form.username(class="form-control form-control-lg") }}
 <!--                                {% endif %}-->
                             </div>
                             <br>
