--- a/app/templates/get_result.html
+++ b/app/templates/get_result.html
@@ -54,7 +54,7 @@
 </div>
 <div class="container">
     <div class="row">
-        <button id="result" class="btn btn-primary login" >Result</button>
+        <a id="result" class="btn btn-primary login" href="result" >Result</a>
     </div>
 </div>
 
