--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,29 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     {% if title %}
         <title>Elektor - {{ title }}</title>
     {% else %}
         <title>Elektor</title>
     {% endif %}
 
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/results.css') }}">
+
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/404.css') }}">
+
+
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+
+    <style>
+
+        .container{overflow: hidden}
+        .tab{float: left;}
+        .tab-2{margin-left: 50px}
+        .tab-2 input{display: block;margin-bottom: 10px}
+        tr{transition:all .25s ease-in-out}
+        tr:hover{background-color:#EEE;cursor: pointer}
+
+    </style>
 
 </head>
 
-
 <body>
 
-    <!-- Navigation -->
     <nav class="navbar navbar-expand-md navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="{{ url_for('static', filename='img/elektor.png') }}" class='logo' alt="Brand"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+            <a class="navbar-brand" href="#"><img src="{{ url_for('static', filename='img/elektor.png') }}"
+                    class='logo' alt="Brand"></a>
+            <button class="navbar-toggler bg-white" type="button" data-toggle="collapse" data-target="#navbarResponsive">
                 <span class="navbar-toggler-icon" style='color:white'></span>
             </button>
             <div class="collapse navbar-collapse text-white" id="navbarResponsive">
@@ -31,101 +45,106 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('index') }}">HOME</a>
                     </li>
+                    {% if current_user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('calculate') }}">CALCULATOR</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('about') }}">TEAMS</a>
+                        <a class="nav-item nav-link" href="{{ url_for('logout') }}">LOGOUT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">FAQ</a>
+                        <a class="nav-item nav-link" href="#">Welcome {{ current_user }}</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-item nav-link" href="{{ url_for('login') }}">LOGIN</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-item nav-link" href="{{ url_for('register') }}">REGISTER</a>
+                    </li>
+                    {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('about') }}">ABOUT</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
+
     <main role="main" class="container">
-      <div class="row">
-        <div class="col-md-8">
-          {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-              {% for category, message in messages %}
-                <div class="alert alert-{{ category }}">
-                  {{ message }}
-                </div>
-              {% endfor %}
-            {% endif %}
-          {% endwith %}
-          {% block content %}{% endblock %}
+        <div class="row">
+          <div class="col-md-8">
+            {% with messages = get_flashed_messages(with_categories=true) %}
+              {% if messages %}
+                {% for category, message in messages %}
+                  <div class="alert alert-{{ category }}">
+                    {{ message }}
+                  </div>
+                {% endfor %}
+              {% endif %}
+            {% endwith %}
+            {% block content %}{% endblock %}
+          </div>
         </div>
+      </main>
+      {% block safe %}
+      <div class="container">
+          <div class="row my-5">
+              <div class="col-md-2"></div>
+              <div class="col-md-3">
+                  <div id="pad">
+                      <img src="{{ url_for('static', filename='img/lock.svg') }}" class='img-fluid' alt="">
+                  </div>
+              </div>
+              <div class="col-md-7 text-white">
+                  <div id='data'>
+                      <h2>Your data is safe with Us. <br>
+                          We are 100% secure.</h2>
+                  </div>
+              </div>
+          </div>
       </div>
-    </main>
-    {% block safe %}
-    <div class="container">
-        <div class="row my-5">
-            <div class="col-md-2"></div>
-            <div class="col-md-3">
-                <div id="pad">
-                    <img src="{{ url_for('static', filename='img/lock.svg') }}" class='img-fluid' alt="">
-                </div>
-            </div>
-            <div class="col-md-7 text-white">
-                <div id='data'>
-                    <h2>Your data is safe with Us. <br>
-                        We are 100% secure.</h2>
-                </div>
-            </div>
-        </div>
-    </div>
-    {% endblock %}
-    <footer>
-        <div>
-            <div class="container text-white mt-5">
-                <div class="row">
-                    <div class="col-md-5">
-                        <img src="{{ url_for('static', filename='img/whitecalc.png') }}" alt="">
-                        <img src="{{ url_for('static', filename='img/elektor-white.png') }}" alt="">
-                        <div class="div">
-                            <p class='mt-3'> &copy; 2019. TeamCharites All rights reserved</p>
-                        </div>
-
-                    </div>
-                    <div class="col-md-4">
-                        <p class='mt-3'>TERMS OF USE</p>
-                        <p>DISCLAIMER</p>
-                        <p>PRIVACY</p>
-                        <p>SITEMAP</p>
-
-
-                    </div>
-                    <div class="col-md-3">
-                        <h4 class='mt-3' id='cont'>CONTACT US</h4>
-                        <address style="line-height: 2rem;">
-                            Team Charites HQ, <br>
-                            HNG Internship, <br>
-                            Remote Address, <br>
-                            Lagos, Nigeria
-                        </address>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </footer>
-
+      {% endblock %}
+                    
+                        <footer style="background-color: #134373; color:#fafcfe; padding-top: 15px;">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-md-5">
+                                        <img src="{{ url_for('static', filename='img/whitecalc.png') }}" alt="">
+                                        <img src="{{ url_for('static', filename='img/elektor-white.png') }}" alt="">
+                                        <div class="div">
+                                            <p class='mt-3'> &copy; 2019. TeamCharites All rights reserved</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <h3 style="color: #e0dd1c;">About the App</h3>
+                                        <p>Know how much power you have in your surrounding at different time
+                                            intervals in order to
+                                            plan for the safier, healthier and cost friendly future you and your family have always dreamt
+                                            of.</p>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <h3 style="color: #e0dd1c;">Contact Us</h3>
+                                        <address style="margin-bottom:30px;">
+                                            Team Charites <br>
+                                            3, Remote House,<br>
+                                            HNG Avenue, Nigeria <br>
+                                            +234-1111-0000 <br>
+                                            info@charitesfinance.com
+                                        </address>
+                                    </div>
+                                </div>
+                            </div>
+                        </footer>
+            
+            
+                        <script type="text/javascript" src="{{ url_for('static', filename='js/outputcalc.js') }}"></script>
+                        <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+                        <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
+                        <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
+            
 
 </body>
-
-
-
-
-
-
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
-<script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
-<script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
 
 </html>
